# scout-engine

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
.github/workflows/: ci-cd.yml
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
app/api/: artifacts.py  auth.py  executions.py  schedules.py  workflows.py
app/migrations/: env.py
app/services/: browser_session.py  cancellation.py  cleanup.py  executor.py  keys.py  network_monitor.py  pause.py  scheduler.py  variables.py  webhook.py
deploy/: Caddyfile  Caddyfile.ip-only  deploy.sh  scout-engine.service  setup-server.sh
docs/plans/: 2026-02-27-human-mode-and-schema-alignment.md  2026-02-27-phase1-production-fixes.md  2026-02-28-hot-takeover-design.md  2026-02-28-hot-takeover-implementation.md  2026-03-06-hetzner-deployment-design.md  2026-03-06-hetzner-deployment-plan.md  2026-03-07-api-key-auth-plan.md  2026-03-07-engine-integration-design.md  2026-03-07-engine-integration-plan.md  sample-workflow.json
tests/: conftest.py  test_api_artifacts.py  test_api_executions.py  test_api_schedules.py  test_api_workflows.py  test_auth.py  test_auth_api.py  test_browser_session.py  test_cancellation.py  test_cleanup.py  test_cli.py  test_executor.py  test_integration.py  test_keys.py  test_models.py  test_network_monitor.py  test_pause.py  test_scheduler.py  test_schemas.py  test_variables.py  test_webhook.py
tests/fixtures/: sample-workflow.json
workflows/pittstate-homepage-screenshot/: pittstate-homepage-screenshot.json  pittstate-homepage-screenshot.py  requirements.txt
(+4 files in other folders)
