[project]
name = "scout-engine"
version = "0.1.0"
description = "Workflow execution service for Scout browser automation"
requires-python = ">=3.11"
authors = [{name = "sdoherty"}]
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "botasaurus-driver>=4.0.0",
    "botasaurus-humancursor>=4.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
scout-engine = "app.main:cli"
scout-engine-create-key = "app.main:create_admin_key"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring a real browser or database",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]
